--- a/.github/workflows/docker_image.yml
+++ b/.github/workflows/docker_image.yml
@@ -1,10 +1,10 @@
-name: Docker image
-
-on:
-  push:
-    branches:
-    - master
-    paths:
+b
+on: vortex hd60l
+  push: 
+    branches: 
+https://github.com/mmorelos0791/https-github.com-termux-termux-apphttps://github.com/mmorelos0791/https-github.com-termux-termux-app
+    - master: 
+    paths: https://github.com/mmorelos0791/https-github.com-termux-termux-app
     - 'scripts/Dockerfile'
     - 'scripts/properties.sh'
     - 'scripts/setup-android-sdk.sh'
